# MLP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  easylog.conf  logo.pdn
MLP_MVS/: MLP_MVS.sln  MLP_MVS.vcxproj  MLP_MVS.vcxproj.filters
MLP_MVS/IrisDatasetTest/: IrisDatasetTest.vcxproj  IrisDatasetTest.vcxproj.filters
MLP_MVS/LayerTest/: LayerTest.vcxproj  LayerTest.vcxproj.filters
MLP_MVS/MLPTest/: MLPTest.vcxproj  MLPTest.vcxproj.filters
MLP_MVS/NodeTest/: NodeTest.vcxproj  NodeTest.vcxproj.filters
data/: iris.mlp
src/: .gitignore  IrisDatasetTest.cpp  Layer.h  LayerTest.cpp  MLP.cpp  MLP.h  MLPTest.cpp  Main.cpp  MlpInspector.cpp  MlpInspector.h  Node.h  NodeTest.cpp  Sample.h  Utils.h
test/: .gitignore  IrisDatasetTest.cpp  MLPTest.cpp  MlpInspectorDummy.cpp  MlpInspectorDummy.h  NodeTest.cpp  UtilTest.cpp
